core: don't retry connection with no secrets after timeout

NMPolicy was resetting the "don't autoconnect because we don't have
secrets" state on a connection when the autoconnect-retries timer
timed out, but this doesn't make sense, since the timeout doesn't
change the fact that there are no secrets.

https://bugzilla.gnome.org/show_bug.cgi?id=670631